# Prof_filter

./: .gitignore  README.md  pyproject.toml
app/: main.py  models.py
app/services/: catalog.py  config.py  datasets.py  exporter.py
config/: output_schema.yaml  schools.yaml
crawler/: __init__.py  catalog_builder.py  enrichment.py
crawler/core/: __init__.py  fetcher.py  models.py
crawler/spiders/: base.py  fudan.py  nju.py  pku.py  registry.py  ruc.py  sjtu.py  tsinghua.py  zju.py
data/: live_catalog.json  sample_catalog.json
data/schools/: fudan.json  nju.json  pku.json  ruc.json  sjtu.json  tsinghua.json  zju.json
prof_filter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: crawl.py  crawl_all_schools.py  export_data.py
tests/: test_catalog.py
web/static/: app.js  styles.css
web/templates/: index.html
